<resources>
    <string name="app_name">Fifa Demo</string>
    <string name="action_settings">Settings</string>
    <string name="base_url">https://ftech2k18-eval-test.apigee.net</string>
    <!--<string name="base_url">https://api.dailymotion.com</string>-->

    <string name="no_connection_error_dismiss">DISMISS</string>
    <string name="no_connection_error_no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_connection_error_no_service">OOPS!</string>

    <string name="no_connection_error_no_network_connection_title">No network connection</string>
    <string name="no_connection_error_no_network_connection_message">Please check your connection and \ntry again</string>
    <string name="no_connection_error_no_service_message">Something has gone wrong.</string>
    <string name="no_network_error_retry">RETRY</string>

    <string name="no_connection_error_content_not_available">Content error</string>
    <string name="no_connection_error_content_error_message">This content is currently unavailable</string>

    <string name="fragment_fixture_detail_title"> </string>
    <string name="fragment_fixture_detail_home">HOME</string>
    <string name="fragment_fixture_detail_away">AWAY</string>
    <string name="fragment_fixture_detail_stats">STATS</string>

</resources>
